--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,11 @@
 header{
     background-color: #add8e6;
     width: 100%;
-    height: 3rem;
+    height: 30rem;
     justify-content: center;
-    align-items: center; 
+    align-items: flex-start; 
+    padding-top: 1rem;
+    flex-wrap: wrap;
 }
 
 header div{
@@ -28,23 +30,29 @@ header div{
     width: 100%;
 }
 
-header div div{
-    background-color: #daa520;
-    border: 1px black dashed;
+#titolo-centrale{
+    background-color: #ee82ee;
+    margin: 2rem 22rem;
 }
 
 #logo{
     width: 20%;
     text-align: start;
+    background-color: #daa520;
+    border: 1px black dashed;
 }
 
 #link{
     width: 80%;
     text-align: center;
+    background-color: #daa520;
+    border: 1px black dashed;
 }
 
 #login{
     width: 20%;
     text-align: end;
+    background-color: #daa520;
+    border: 1px black dashed;
 } 
 
