--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ header{
     height: 20rem;
     border: 1px black solid;
     margin-right: 14rem;
+    min-width: 22.84rem;
 }
 
 .square-big{
@@ -53,6 +54,7 @@ header{
     width: 45rem;
     height: 20rem;
     border: 1px black solid;
+    min-width: 22.84rem;
 }
 
 .square-small{
@@ -60,6 +62,7 @@ header{
     width: 30rem;
     height: 20rem;
     border: 1px black solid;
+    min-width: 15.25rem;
 }
 
 .square-small-gray{
@@ -68,6 +71,7 @@ header{
     height: 20rem;
     border: 1px black solid;
     margin-left: 14rem;
+    min-width: 15.25rem;
 }
 
 .dimension-section1{
@@ -95,6 +99,7 @@ header{
     height: 40rem;
     border: 1px black solid;
     margin: 0 14rem;
+    min-width: 38.2rem;
 }
 
 .section-black{
@@ -108,6 +113,7 @@ header{
     align-items: stretch;
     height: 100%;
     border: 1px rgb(255, 255, 255) dashed;
+    min-width: 18.74rem;
 }
 
 .rectangle-cyan{
@@ -116,11 +122,12 @@ header{
     align-items: stretch;
     height: 100%;
     border: 1px rgb(255, 255, 255) dashed;
+    min-width: 11.25rem
 }
 
 .section-black-small{
     background-color: #23272a;
-    padding: 1rem 14rem 1.5rem 14rem;
+    padding: 1rem 14rem 0rem 14rem;
     margin-top: 0.1rem;
     width: 100%;
     justify-content: center;
